--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ a:visited, a:link{
     background-color: #FDFDFD;
     display: grid;
     grid-template-columns: 50% 50%; /* 1 */
-    grid-template-rows: 72px auto 72px; /* 3 */
+    grid-template-rows: auto auto 72px; /* 3 */
     grid-template-areas:
         "title1 title1"
         "desc1 desc1"
@@ -808,7 +808,7 @@ h1{
         gap: 24px;
         display: grid;
         grid-template-columns: 20% 30% 30% 20%;
-        grid-template-rows: 50% auto;
+        grid-template-rows: 60% auto;
         grid-template-areas:
             "space1 section1 section2 space2"
             "space1 section3 section3 space2"; 
